# Ur5e-2f-85f

./: .gitignore  README.md  ur5e_2f_planning.rviz
.devcontainer/: Dockerfile  devcontainer.json  readme_rt1_test.md
docker/: README.md
docker/docker_sim/: README.md
to_mount/: move_group_python_interface.py  test_nodeeeeee_backup.py
ur5e_2f_85_camera_table_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_2f_85_camera_table_moveit_config/config/: fake_controllers.yaml  gazebo_ur5e_2f_85.urdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur5e_2f_85.srdf
ur5e_2f_85_camera_table_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  moveit_planning_execution.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  real_robot_moveit_planning_execution.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur5e_2f_85_controller/: CMakeLists.txt  package.xml  setup.py
ur5e_2f_85_description/: CMakeLists.txt  package.xml
ur5e_2f_85_gripper_controller/: CMakeLists.txt  package.xml
ur5e_2f_85_gripper_description/: CMakeLists.txt  package.xml
ur5e_2f_85_gripper_description_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_2f_85_gripper_moveit_config/: CMakeLists.txt  package.xml
(+175 files in other folders)
